--- a/themes/bix/sass/_variables.scss
+++ b/themes/bix/sass/_variables.scss
@@ -24,8 +24,8 @@ $color__orange: #F9AC31;
 $color__gray: #444444;
 
 // Revision 1 colors
-$grey_button: #9d9d9d;
-$grey_link: #3f4042;
+$grey_light: #9d9d9d;
+$grey_dark: #3f4042;
 
 // Bix Typography
 
