--- a/themes/bix/sass/_about.scss
+++ b/themes/bix/sass/_about.scss
@@ -65,7 +65,6 @@ h3 {
 		p {
 			font-family: $font__header;
 			margin: 1rem 2rem;
-			text-align: center;
 			width: 100%;
 			padding: 0 10px;
 		}
@@ -202,12 +201,12 @@ h3 {
 		.website-img-link {
 			height: 100%;
 			max-width: 400px;
-			border: solid 1px $color__blue;
+			border: solid 1px $color__orange;
 		}
 		.website-text-link {
 			font-family: $font__header;
 			text-decoration: none;
-			color: $color__blue;
+			color: $color__orange;
 		}
 	}
 
