--- a/themes/bix/sass/_mixins.scss
+++ b/themes/bix/sass/_mixins.scss
@@ -34,13 +34,13 @@
   text-decoration: none;
   border: solid #fff 2px;
   border-radius: 30px;
-  background-color: $color__blue;
+  background-color: $grey_light;
   font-weight: 500;
   font-size: 1.1rem;
   transition: all ease 0.4s;
   &:hover{
-    color: $color__blue;
-    border: solid $color__blue 2px;
+    color: $grey_light;
+    border: solid $grey_light 2px;
     background-color: #fff;
   }
 }
