change banner image for bix book page

--- a/themes/bix/sass/_about.scss
+++ b/themes/bix/sass/_about.scss
@@ -232,7 +232,7 @@ h3 {
     	.about-title{
 			visibility: visible;
 			height: auto;
-			width: 250px;
+			width: auto;
 			overflow: hidden;
 			max-width: 250px;
 			color:#fff;
@@ -249,9 +249,8 @@ h3 {
 	    p{
 			visibility: visible;
 			height: auto;
-			width: 250px;
+			width: auto;
 			overflow: hidden;
-			max-width: 250px;
 			color: #fff;
 			font-weight: 300;
 			margin-top: 0;
