--- a/themes/bix/sass/_bix-book.scss
+++ b/themes/bix/sass/_bix-book.scss
@@ -14,6 +14,14 @@
 			width: 0;
 			overflow: hidden;  
 		}
+		.btn-download{
+		    background-color: black;
+		    padding: 5px 20px;
+		    color: #fff;
+		    text-decoration: none;
+		    text-transform: uppercase;
+		    font-weight: 300;
+		  }
 	}
 
 	.the-bix-book-title{
@@ -264,7 +272,7 @@
 		.bix-book-banner{
 			background: url(../../images/bix-book-banner-lg.jpg) no-repeat center left;
 			background-size: cover;
-			height: 70vh;
+			height: 80vh;
 			overflow: hidden;
 			position: relative;
 			.site-logo{
@@ -275,15 +283,25 @@
 				max-width: 250px;
 			}
 			.the-bix-book-title{
-				color:#fff;
-				border-bottom: solid 2px #fff;
-				border-top: solid 2px #fff;
+				color:black;
+				border-bottom: solid 2px black;
+				border-top: solid 2px black;
 				font-size: 1.5rem;
 				padding:10px 0;
-				width: 250px;
+				width: auto;
 				text-transform: capitalize;
 				font-weight: 500;
 			}
+		}
+		.bix-book-header {
+			width: 100%;
+			background: rgba(255,255,255,0.5);
+		}
+		.bix-book-header-container{
+			display: flex;
+			flex-direction: column;
+			justify-content: center;
+			align-items: center;
 		}
 		.book-section1{
 			background: none;
